# ImageResizer

./: README.md  README.txt  logging_formatter.py  main.py  pyproject.toml
