[tool.poetry]
name = "imageresizer"
version = "0.1.0"
description = ""
authors = ["IndexOfNull <21084775+IndexOfNull@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Pillow = "^9.3.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
